--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,15 @@ yarn-error.log*
 # Chrome automation profile
 .chrome-profile/
 
-# Browser screenshots
-agent/browser_screenshots/
+# Browser screenshots and custom scripts (ignore contents but keep directory structure)
+agent/browser_screenshots/*
+!agent/browser_screenshots/.gitkeep
+
+agent/custom_scripts/*
+!agent/custom_scripts/.gitkeep
+
+agent/downloads/*
+!agent/downloads/.gitkeep
 
 # Stagehand Cache
 tmp/.cache/
