--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@anthropic-ai/claude-agent-sdk": "^0.1.14",
     "@browserbasehq/stagehand": "^2.5.2",
+    "dotenv": "^17.2.3",
     "sharp": "^0.34.4",
     "zod": "^3.25.0"
   },
